Added Blackberry Jelly Sandwich to the edible item list for wolves if Pam's Harvestcraft is installed.

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ curseforge {
         }
         relations {
             optionalLibrary 'et-futurum'
+            optionalLibrary 'pams-harvestcraft'
         }
     }
 }
