--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7.10-1.0.12"
+version = "1.7.10-1.0.12a"
 group = "au.lyrael.stacywolves" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Stacy'sWolvesMod"
 
